[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/Truck.gd" type="Script" id=1]
[ext_resource path="res://Scripts/RunGame.gd" type="Script" id=2]
[ext_resource path="res://Assets/background/night_time_scenary.png" type="Texture" id=3]
[ext_resource path="res://Assets/player/truck.png" type="Texture" id=4]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/GameOverRunGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/items/left_key_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/items/left_key.png" type="Texture" id=8]
[ext_resource path="res://Assets/items/right_key_pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/items/right_key.png" type="Texture" id=10]
[ext_resource path="res://Assets/fonts/CompassPro.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/debuffs/spritesheet_phone.png" type="Texture" id=12]
[ext_resource path="res://Assets/music/vibrate.mp3" type="AudioStream" id=13]
[ext_resource path="res://Assets/items/radio_spritesheet.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 65, 66 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 14 )
region = Rect2( 0, 66, 65, 66 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 14 )
region = Rect2( 65, 66, 65, 66 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 14 )
region = Rect2( 0, 132, 65, 66 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 14 )
region = Rect2( 65, 132, 65, 66 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "radio1",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "radio2",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "radio3",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "radio4",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "radio5",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 58.3101, 208 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 12.2727, 21.6334 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 11 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "pressed",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "pressed",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 1280, 1280 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 1280, 1280, 1280 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 2560, 1280, 1280 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="RoadRunGame" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Road" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Road"]
motion_mirroring = Vector2( 0, 450 )

[node name="Sprite" type="Sprite" parent="Road/ParallaxLayer"]
position = Vector2( 320, 186 )
scale = Vector2( 1, 1.03333 )
texture = ExtResource( 3 )

[node name="ReadyTimer" type="Timer" parent="."]

[node name="RadioSprite" type="AnimatedSprite" parent="."]
position = Vector2( 568, 301 )
frames = SubResource( 22 )
animation = "radio1"

[node name="Margin" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="collision_left" type="CollisionShape2D" parent="Margin"]
position = Vector2( 64, 161.766 )
scale = Vector2( 1.01979, 1 )
shape = SubResource( 4 )

[node name="collision_right" type="CollisionShape2D" parent="Margin"]
position = Vector2( 577, 168 )
scale = Vector2( 1.08043, 1 )
shape = SubResource( 4 )

[node name="truck" type="KinematicBody2D" parent="."]
position = Vector2( 0, 8 )
collision_mask = 4
script = ExtResource( 1 )

[node name="collision_truck" type="CollisionShape2D" parent="truck"]
position = Vector2( 384, 304 )
scale = Vector2( 1.1, 1.618 )
shape = SubResource( 7 )

[node name="sprite_truck" type="Sprite" parent="truck"]
position = Vector2( 384, 304 )
rotation = 3.14159
scale = Vector2( 0.125, 0.106099 )
texture = ExtResource( 4 )

[node name="SpawnCarros" type="Node2D" parent="."]
position = Vector2( 0, -88 )

[node name="SpawnPositions" type="Node2D" parent="SpawnCarros"]
position = Vector2( 312, 16 )
scale = Vector2( 1.52499, 9.18033 )

[node name="lane1" type="Position2D" parent="SpawnCarros/SpawnPositions"]
position = Vector2( -94.4266, 0 )

[node name="track1" type="Position2D" parent="SpawnCarros/SpawnPositions"]
position = Vector2( -62.9511, 0 )

[node name="lane2" type="Position2D" parent="SpawnCarros/SpawnPositions"]
position = Vector2( -31.4755, 0 )

[node name="track2" type="Position2D" parent="SpawnCarros/SpawnPositions"]

[node name="SpawnObstacles" type="Node2D" parent="."]
position = Vector2( 0, -88 )

[node name="SpawnPositions" type="Node2D" parent="SpawnObstacles"]
position = Vector2( 312, 16 )
scale = Vector2( 1.52499, 9.18033 )

[node name="p1" type="Position2D" parent="SpawnObstacles/SpawnPositions"]
position = Vector2( 26.2297, 0 )

[node name="p2" type="Position2D" parent="SpawnObstacles/SpawnPositions"]
position = Vector2( 52.4594, 0 )

[node name="p3" type="Position2D" parent="SpawnObstacles/SpawnPositions"]
position = Vector2( 78.6891, 0 )

[node name="p4" type="Position2D" parent="SpawnObstacles/SpawnPositions"]
position = Vector2( 104.919, 0 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="GameOver" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 400.0
margin_top = 90.0
margin_right = 430.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 164.0
margin_top = 155.0
margin_right = 461.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 9 )
text = "Movimente-se com as setas do teclado"
align = 1
valign = 1

[node name="LeftSprite" type="AnimatedSprite" parent="."]
position = Vector2( 40, 328 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 10 )

[node name="RigthSprite" type="AnimatedSprite" parent="."]
position = Vector2( 69, 328 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 11 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="SpawnObstacleTimer" type="Timer" parent="."]

[node name="PhoneDebuff" type="CanvasLayer" parent="."]
visible = false

[node name="PhoneTimer" type="Timer" parent="PhoneDebuff"]
wait_time = 20.0

[node name="ColorRect" type="ColorRect" parent="PhoneDebuff"]
margin_right = 640.0
margin_bottom = 368.0
color = Color( 0, 0, 0, 0.862745 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PhoneDebuff"]
position = Vector2( 312, 184 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 15 )
frame = 2

[node name="Vibrate" type="AudioStreamPlayer2D" parent="PhoneDebuff"]
stream = ExtResource( 13 )

[node name="Controller" type="Timer" parent="PhoneDebuff"]
wait_time = 5.0

[connection signal="timeout" from="ReadyTimer" to="." method="_on_ReadyTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="SpawnObstacleTimer" to="." method="_on_SpawnObstacleTimer_timeout"]
[connection signal="timeout" from="PhoneDebuff/PhoneTimer" to="." method="_on_PhoneTimer_timeout"]
[connection signal="timeout" from="PhoneDebuff/Controller" to="." method="_on_Controller_timeout"]
